--- a/app/assets/stylesheets/message.css
+++ b/app/assets/stylesheets/message.css
@@ -3,22 +3,53 @@
 }
 
 
-/* ルーム欄 */
+/* ルーム */
 .side-bar {
   height: 100vh;
   width: 300px;
   background-color: #253141;
 }
 
+/* 左ヘッダー */
 .side-bar-header {
   height: 100px;
   padding: 0 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.side-bar-header a {
+  text-decoration: none;
+}
+
+.header-name a {
+  font-size: 16px;
+  color: #FAFAFA;
+}
+
+/* ルーム一覧 */
+.create-room a {
+  font-size: 10px;
+  color: deepskyblue;
+  padding: 14px;
+  border: 1px solid lightblue;
+}
+
+.rooms {
+  height: calc(100vh - 100px);;
+  background-color: #2F3E51;
+  padding: 0 20px;
+  overflow: scroll;
 }
 
 .room {
-  height: calc(100vh - 100px);
-  background-color: #2F3E51;
-  padding: 0 20px;
+  padding: 20px 0 40px;
+}
+
+.room-name a {
+  text-decoration: none;
+  color: white;
 }
 
 
@@ -31,16 +62,107 @@
 .chat-header {
   height: 100px;
   padding: 0 40px;
+  display: flex;
+  justify-content: space-between;
 }
 
+
+/* 右ヘッダー */
+.header-title {
+  font-size: 24px;
+  color: #333;
+  margin-top: 36px;
+}
+
+.header-button {
+  margin-top: 40px;
+}
+
+.header-button a {
+  text-decoration: none;
+  color: darkred;
+  padding: 20px;
+  border: 1px solid darkred;
+}
+
+/* メッセージ */
 .messages {
   height: calc(100vh - 100px - 90px);
   background-color: #FAFAFA;
   padding: 46px 40px 0;
+  overflow: scroll;
+}
+
+.message {
+  margin-top: 10px;
+}
+
+.upper-message {
+  display: flex;
+}
+
+.message-user {
+  font-size: 16px;
+  color: #434A54;
+}
+
+.message-date {
+  color: #999;
+  padding-left: 10px;
+  font-size: 12px
+}
+
+.lower-message{
+  margin-top: 10px;
+}
+
+.message-content {
+  font-size: 14px;
+  color: #434A54;
+  margin-bottom: 40px;
 }
 
 .form {
   height: 90px;
   background-color: #DDDDDD;
   padding: 20px 40px;
+  display: flex;
+}
+
+.form-input {
+  background-color: white;
+  width: 100%;
+  display: flex;
+}
+
+.form-image {
+  font-size: 12px;
+  background-color: lightblue;
+  color: white;
+  padding: 12px;
+  width: 60px;
+  margin: 5px 10px;
+  text-align: center;
+}
+
+.hidden {
+  display: none;
+}
+
+.form-message {
+  height: 50px;
+  border: none;
+  width: 100%;
+  padding-left: 10px;
+}
+
+.form-submit {
+  height: 50px;
+  font-size: 16px;
+  background-color: #38AEF0;
+  color: white;
+  font-size: 16px;
+  border: none;
+  padding: 0 20px;
+  margin-left: 15px;
 }
